# hd2_hender

./: README.md  sdkconfig  sdkconfig.old  y  y.pub
main/: CMakeLists.txt  app_ui.c  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c
main/assets/: bjbb.c  gdjg.c  robot.c  sjhjp.c  sjjp.c  super_earth.c  tjb.c  wdsss.c
main/bt/: ble_hidd_demo.c  ble_hidd_demo.h
